Created new notebook and updated files for project to complete Eliza's part

--- a/clean_files_ey.ipynb
+++ b/clean_files_ey.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import dependencies \n",
+    "# Import dependencies \n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
@@ -229,7 +229,7 @@
     "movies_df.set_index('title', inplace=True)\n",
     "genre_dfs.set_index('title', inplace=True)\n",
     "\n",
-    "# combine_first will fill in NaN values with non-NaN values from each dataframe\n",
+    "# Combine_first will fill in NaN values with non-NaN values from each dataframe\n",
     "merged_movies_df = movies_df.combine_first(genre_dfs)\n",
     "merged_movies_df.reset_index(inplace=True)\n",
     "merged_movies_df[merged_movies_df['title'] == 'Dream Round']\n"
@@ -345,11 +345,11 @@
     }
    ],
    "source": [
-    "# merge in highest grossing\n",
+    "# Merge in highest grossing\n",
     "merged_movies_df.set_index('title', inplace=True)\n",
     "highest_gross_df.set_index('title', inplace=True)\n",
     "\n",
-    "# combine_first will fill in NaN values with non-NaN values from each dataframe\n",
+    "# Combine_first will fill in NaN values with non-NaN values from each dataframe\n",
     "merged_movies_df = merged_movies_df.combine_first(highest_gross_df)\n",
     "merged_movies_df.reset_index(inplace=True)\n",
     "merged_movies_df[merged_movies_df['title'] == 'Dream Round']"
@@ -712,21 +712,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/62/f2x4shss4kq25jc_zwqwlh740000gn/T/ipykernel_27238/45213050.py:15: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/62/f2x4shss4kq25jc_zwqwlh740000gn/T/ipykernel_29079/4016272022.py:15: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  deduplicated_movies_df['year'].fillna(1800, inplace=True)\n",
-      "/var/folders/62/f2x4shss4kq25jc_zwqwlh740000gn/T/ipykernel_27238/45213050.py:26: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/62/f2x4shss4kq25jc_zwqwlh740000gn/T/ipykernel_29079/4016272022.py:26: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -755,7 +755,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +798,322 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>year</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>director</th>\n",
+       "      <th>star</th>\n",
+       "      <th>gross</th>\n",
+       "      <th>votes</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>company</th>\n",
+       "      <th>license</th>\n",
+       "      <th>is_not_numeric</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>#1 Serial Killer</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>Horror</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Stanley Yung</td>\n",
+       "      <td>Jason Tobin, \\nEugenia Yuan, \\nTzi Ma, \\nShosh...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>62</td>\n",
+       "      <td>87 min</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>Not Rated</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>#1915House</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Horror, Thriller</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Justin DiPego</td>\n",
+       "      <td>Justin DiPego</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>55 min</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>#5</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>Biography, Comedy, Fantasy</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ricky Bardy</td>\n",
+       "      <td>Justin Bardy, \\nRicky Bardy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13</td>\n",
+       "      <td>68 min</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>#66</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Asun Mawardi</td>\n",
+       "      <td>Ari Riski Ananda, \\nErwin Bagindo, \\nFandy Chr...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>32</td>\n",
+       "      <td>116 min</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>#69 Samskar Colony</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>Romance</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Suneel Kumar Reddy</td>\n",
+       "      <td>Ajay, \\nArtnilxen, \\nFm Babai, \\nBadram</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>516</td>\n",
+       "      <td>126 min</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>371071</th>\n",
+       "      <td>Üç Harflilerin Musallat Oldugu Büyülü Konakta ...</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>Comedy, Horror, Thriller</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Sinan Kaçar</td>\n",
+       "      <td>Cemre Kurum, \\nEcenaz Üçer, \\nOnur Durmaz, \\nD...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>127</td>\n",
+       "      <td>80 min</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>371096</th>\n",
+       "      <td>Üçüncü Günün Adami</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Babak Shirinsefat</td>\n",
+       "      <td>Kamran Aghabalayev, \\nNijat Ali, \\nRasim Cafar...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>371102</th>\n",
+       "      <td>Þriðja nafni</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>Comedy, Drama, Thriller</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Einar Thor</td>\n",
+       "      <td>Moses Rockman, \\nElma Lísa Gunnarsdóttir, \\nHj...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>38</td>\n",
+       "      <td>88 min</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>371104</th>\n",
+       "      <td>Καραγκιόζης the Movie</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Animation, Comedy, Family</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Akis Karras, \\nChristos Leivaditis, \\nEkaterin...</td>\n",
+       "      <td>Athos Danellis, \\nElena Maragou</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20</td>\n",
+       "      <td>74 min</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>371106</th>\n",
+       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Action, Drama, Mystery</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>G.M. Whiting</td>\n",
+       "      <td>Israel Adam, \\nBrock Brazda, \\nLanden James, \\...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>111457 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    title  rating  \\\n",
+       "2                                        #1 Serial Killer     5.9   \n",
+       "3                                              #1915House     NaN   \n",
+       "5                                                      #5     5.9   \n",
+       "7                                                     #66     5.6   \n",
+       "8                                      #69 Samskar Colony     6.5   \n",
+       "...                                                   ...     ...   \n",
+       "371071  Üç Harflilerin Musallat Oldugu Büyülü Konakta ...     2.5   \n",
+       "371096                                 Üçüncü Günün Adami     8.9   \n",
+       "371102                                       Þriðja nafni     6.3   \n",
+       "371104                              Καραγκιόζης the Movie     6.0   \n",
+       "371106                                                nan     NaN   \n",
+       "\n",
+       "                             genre  year release_date  budget  \\\n",
+       "2                           Horror  2013          NaT     NaN   \n",
+       "3                 Horror, Thriller  2018          NaT     NaN   \n",
+       "5       Biography, Comedy, Fantasy  2013          NaT     NaN   \n",
+       "7                           Action  2015          NaT     NaN   \n",
+       "8                          Romance  2022          NaT     NaN   \n",
+       "...                            ...   ...          ...     ...   \n",
+       "371071    Comedy, Horror, Thriller  2018          NaT     NaN   \n",
+       "371096                      Action  2017          NaT     NaN   \n",
+       "371102     Comedy, Drama, Thriller  2003          NaT     NaN   \n",
+       "371104   Animation, Comedy, Family  2022          NaT     NaN   \n",
+       "371106      Action, Drama, Mystery  2015          NaT     NaN   \n",
+       "\n",
+       "                                                 director  \\\n",
+       "2                                            Stanley Yung   \n",
+       "3                                           Justin DiPego   \n",
+       "5                                             Ricky Bardy   \n",
+       "7                                            Asun Mawardi   \n",
+       "8                                      Suneel Kumar Reddy   \n",
+       "...                                                   ...   \n",
+       "371071                                        Sinan Kaçar   \n",
+       "371096                                  Babak Shirinsefat   \n",
+       "371102                                         Einar Thor   \n",
+       "371104  Akis Karras, \\nChristos Leivaditis, \\nEkaterin...   \n",
+       "371106                                       G.M. Whiting   \n",
+       "\n",
+       "                                                     star  gross  votes  \\\n",
+       "2       Jason Tobin, \\nEugenia Yuan, \\nTzi Ma, \\nShosh...    NaN     62   \n",
+       "3                                           Justin DiPego    NaN      0   \n",
+       "5                             Justin Bardy, \\nRicky Bardy    NaN     13   \n",
+       "7       Ari Riski Ananda, \\nErwin Bagindo, \\nFandy Chr...    NaN     32   \n",
+       "8                 Ajay, \\nArtnilxen, \\nFm Babai, \\nBadram    NaN    516   \n",
+       "...                                                   ...    ...    ...   \n",
+       "371071  Cemre Kurum, \\nEcenaz Üçer, \\nOnur Durmaz, \\nD...    NaN    127   \n",
+       "371096  Kamran Aghabalayev, \\nNijat Ali, \\nRasim Cafar...    NaN      9   \n",
+       "371102  Moses Rockman, \\nElma Lísa Gunnarsdóttir, \\nHj...    NaN     38   \n",
+       "371104                    Athos Danellis, \\nElena Maragou    NaN     20   \n",
+       "371106  Israel Adam, \\nBrock Brazda, \\nLanden James, \\...    NaN      0   \n",
+       "\n",
+       "        runtime company    license  is_not_numeric  \n",
+       "2        87 min     nan  Not Rated           False  \n",
+       "3        55 min     nan        nan           False  \n",
+       "5        68 min     nan        nan           False  \n",
+       "7       116 min     nan        nan           False  \n",
+       "8       126 min     nan        nan           False  \n",
+       "...         ...     ...        ...             ...  \n",
+       "371071   80 min     nan        nan           False  \n",
+       "371096      nan     nan        nan           False  \n",
+       "371102   88 min     nan        nan           False  \n",
+       "371104   74 min     nan        nan           False  \n",
+       "371106      nan     nan        nan           False  \n",
+       "\n",
+       "[111457 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Drop rows where the 'year' column has values before 1990\n",
+    "deduplicated_movies_df = deduplicated_movies_df[deduplicated_movies_df['year'] >= 1990]\n",
+    "deduplicated_movies_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
